# odoo-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  configure.py  install.sh  pyproject.toml
.github/workflows/: ci.yml
src/odoo_mcp/: config.py  errors.py  logging.py  mcp_server.py  odoo_client.py  schemas.py  security.py
tests/: test_client.py  test_security_validation.py  test_tools.py  test_transports.py
